# ragsmith

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  CLAUDE.md  LICENSE  README.md  docker-compose.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: release.yml
.github/workflows/: ci.yml  integration.yml  release.yml
api/SUMMARY/: index.html
api/ragsmith/: index.html
api/ragsmith/chunking/: index.html
api/ragsmith/embeddings/: index.html
api/ragsmith/retriever/: index.html
api/ragsmith/store/: index.html
docs/: index.md
examples/: quickstart.py
scripts/: gen_ref_pages.py
search/: search_index.json
src/ragsmith/: __init__.py  chunking.py  embeddings.py  retriever.py  store.py
tests/: conftest.py  test_chunking.py  test_embeddings.py  test_package.py  test_retriever.py  test_store.py  test_store_from_dsn.py
tests/integration/: conftest.py  test_pg_store_live.py  test_voyage_live.py
