[project]
name = "ragsmith"
version = "0.0.2"
description = "Async RAG toolkit on top of Postgres/pgvector and Voyage AI."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "gghez" }]
requires-python = ">=3.14"
keywords = ["rag", "pgvector", "voyageai", "asyncpg", "embeddings"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.14",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]
dependencies = [
    "asyncpg>=0.30",
    "httpx>=0.28",
]

[project.urls]
Homepage = "https://github.com/gghez/ragsmith"
Documentation = "https://gghez.github.io/ragsmith/"
Repository = "https://github.com/gghez/ragsmith"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "pytest-httpx>=0.35",
    "ruff>=0.8",
    "pre-commit>=4.0",
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.27",
    "mkdocs-gen-files>=0.5",
    "mkdocs-literate-nav>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ragsmith"]

[tool.ruff]
line-length = 100
target-version = "py314"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203",   # one-blank-line-before-class (conflicts with D211)
    "D213",   # multi-line-summary-second-line (conflicts with D212)
    "COM812", # trailing-comma (conflicts with formatter)
    "ISC001", # single-line-implicit-concat (conflicts with formatter)
]

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "D", "ANN", "PLR2004", "SLF001", "INP001"]
"docs/**" = ["INP001", "D", "ANN"]
"scripts/**" = ["INP001", "T201"]
"examples/**" = ["INP001", "T201", "D", "ANN"]

[tool.ruff.format]
docstring-code-format = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=ragsmith",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-fail-under=100",
    "--doctest-modules",
    "-m",
    "not integration",
]
asyncio_mode = "auto"
testpaths = ["tests", "src"]
markers = [
    "integration: requires a live Postgres + pgvector and/or Voyage API (opt-in via -m integration)",
]

[tool.coverage.run]
branch = true
source = ["ragsmith"]

[tool.coverage.report]
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
skip_covered = false
